# imreg_dft

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  regression.yml
doc/: conf.py  stack_imgs.py
resources/code/: similarity.py  translation.py
src/imreg_dft/: __init__.py  cli.py  imreg.py  loader.py  reporting.py  show.py  tform.py  tiles.py  utils.py
tests/regressiontests/: Makefile  check_image_identity.py  check_similarity.sh  img2mat.py  mk_complex.py
tests/unittests/: hypothesis_test.py  imreg_test.py  reporting_test.py  tform_test.py  utils_test.py
