[project]
name = "imreg_dft"
version = "2.0.1a"
description = "Image registration utility using algorithms based on discrete Fourier transform (DFT, FFT)"
authors = [
  { name = "Matěj Týč", email = "matej.tyc@gmail.com" },
  { name = "Jannik Schäfer", email = "jannik.schaefer@inbox-online.de" },
]
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["image", "registration", "2d", "fft"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Operating System :: OS Independent",
  "Natural Language :: English",
]

dependencies = [
  "numpy>1.22", # >1.22 is required due to removal of 'distutils' for Python 3.12+ support
  "scipy>=0.12",
  "pillow",
]

[project.optional-dependencies]
better_performance = ["pyfftw>=0.13"]
plotting = ["matplotlib>=3"]

[project.urls]
Documentation = "https://github.com/jnk22/imreg_dft#readme"
Issues = "https://github.com/jnk22/imreg_dft/issues"
Source = "https://github.com/jnk22/imreg_dft"

[project.scripts]
ird = 'imreg_dft.cli:main'
ird-tform = 'imreg_dft.tform:main'
ird-show = 'imreg_dft.show:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest==8.3.3",
  "pytest-xdist==3.6.1",
  "pytest-cov==5.0.0",
  "ruff==0.6.9",
]

[tool.coverage.report]
exclude_lines = ["if (typing\\.)?TYPE_CHECKING:"]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]
"tests/*.py" = ["S101"]
